Fix warning of Netty trying to load native libraries